# lightwave

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
beacon-electra/: Cargo.toml
beacon-electra/src/: lib.rs
beacon-electra/src/types/: electra.rs
crates/beacon-electra/: Cargo.toml
crates/beacon-electra/src/: helpers.rs
crates/integrations/sp1-helios/circuit/: Cargo.toml
crates/integrations/sp1-helios/circuit/src/: blueprint.rs  main.rs
crates/integrations/sp1-helios/recursion-types/: Cargo.toml
crates/integrations/sp1-helios/recursion-types/src/: lib.rs
crates/integrations/sp1-helios/wrapper-circuit/: Cargo.toml
crates/integrations/sp1-helios/wrapper-circuit/src/: main.rs
crates/integrations/sp1-tendermint/circuit/: Cargo.toml
crates/integrations/sp1-tendermint/circuit/src/: blueprint.rs  main.rs
crates/integrations/sp1-tendermint/recursion-types/: Cargo.toml
crates/integrations/sp1-tendermint/recursion-types/src/: lib.rs
crates/integrations/sp1-tendermint/wrapper-circuit/src/: blueprint.rs  main.rs
crates/service/: Cargo.toml  build.rs
crates/service/src/: api.rs  checkpoints.rs  main.rs  prover.rs  state.rs
crates/service/src/preprocessor/: helios.rs  helpers.rs  mod.rs
data/: service_state.db
docs/: HELIOS.md  TENDERMINT.md
docs/integrations/: TENDERMINT.md
docs/internal/: REVIEW.md  TENDERMINT.md
elfs/constant/: sp1-tendermint-elf
recursion/circuit/: Cargo.toml
recursion/circuit/src/: blueprint.rs  main.rs
recursion/recursion-types/: Cargo.toml
recursion/recursion-types/src/: lib.rs
recursion/wrapper-circuit/: Cargo.toml
recursion/wrapper-circuit/src/: blueprint.rs  main.rs
service/: Cargo.toml  build.rs
service/src/: api.rs  helpers.rs  main.rs  prover.rs  state.rs
service/src/preprocessor/: helios.rs  mod.rs
sp1-helios/circuit/src/: main.rs
sp1-helios/wrapper-circuit/: Cargo.toml
sp1-helios/wrapper-circuit/src/: blueprint.rs  main.rs
sp1-tendermint/circuit/: Cargo.toml
sp1-tendermint/circuit/src/: blueprint.rs  main.rs
sp1-tendermint/wrapper-circuit/: Cargo.toml
sp1-tendermint/wrapper-circuit/src/: main.rs
