[workspace]
members = ["service"]
resolver = "2"


[profile.dev]
opt-level = 3

[workspace.dependencies]
# Helios ZK Light Client Dependencies
helios-program = { package = "sp1-helios-program", git = "https://github.com/timewave-computer/sp1-helios", branch = "valence-compat" }
helios-operator = { package = "sp1-helios-script", git = "https://github.com/timewave-computer/sp1-helios", branch = "valence-compat" }
helios-consensus-core = { git = "https://github.com/a16z/helios", tag = "0.8.6" }
helios-ethereum = { git = "https://github.com/a16z/helios", tag = "0.8.6" }
sp1-helios-primitives = { package = "sp1-helios-primitives", git = "https://github.com/timewave-computer/sp1-helios", branch = "valence-compat" }

tokio = { version = "1.41.1", features = ["full"] }
alloy = { version = "0.12.5", features = ["full"] }
alloy-primitives = { version = "0.8.25", features = ["rlp"] }
alloy-sol-types = "0.7"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"
dotenvy = "0.15.7"
anyhow = "1.0.98"
reqwest = "0.12.15"
serde_json = "1.0.105"


sp1-zkvm = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall" }
sp1-sdk = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall", features = [
    "native-gnark",
] }
# not a custom branch, just a small deps fix for the release tag 4.1.7
sp1-verifier = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall" }

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-4.0.0" }
