[workspace]
members = [
    "crates/integrations/sp1-helios/circuit",
    "crates/integrations/sp1-helios/recursion-types",
    "crates/integrations/sp1-helios/wrapper-circuit",
    "crates/integrations/sp1-tendermint/circuit",
    "crates/integrations/sp1-tendermint/recursion-types",
    "crates/integrations/sp1-tendermint/wrapper-circuit",
    "crates/service",
]
resolver = "2"


[profile.dev]
opt-level = 3

[workspace.dependencies]
sha2 = { version = "0.10.8", default-features = false }
dotenvy = "0.15.7"
anyhow = { version = "1.0.98", default-features = false }
reqwest = "0.12.15"
tokio = { version = "1.44.2", default-features = false, features = [
    "macros",
    "rt",
] }
serde = { version = "1", features = ["derive"], default-features = false }
serde_cbor = "0.11.2"
serde_json = { version = "1.0.105", features = [
    "alloc",
], default-features = false }
borsh = { version = "1.5.5", features = ["derive"], default-features = false }
itertools = { version = "0.14", default-features = false }
sp1-zkvm = "5.0.0"
sp1-sdk = { version = "5.0.6", features = ["native-gnark"] }
sp1-verifier = "5.0.0"

# alloy
alloy = { version = "0.12.5", features = ["full"] }
alloy-primitives = { version = "0.8.15", features = ["rlp"] }
alloy-sol-types = "0.8.15"
alloy-trie = "0.7.9"
alloy-rlp = { version = "0.3.9", default-features = false, features = [
    "derive",
    "arrayvec",
] }

# helios only
helios-program = { package = "sp1-helios-program", git = "https://github.com/succinctlabs/sp1-helios", rev = "c9e81c8e48dec1e65e2de9fac6aed3a2cda6911e" }
helios-operator = { package = "sp1-helios-script", git = "https://github.com/succinctlabs/sp1-helios", rev = "c9e81c8e48dec1e65e2de9fac6aed3a2cda6911e" }
helios-consensus-core = { git = "https://github.com/a16z/helios", tag = "0.8.6" }
helios-ethereum = { git = "https://github.com/a16z/helios", tag = "0.8.6" }
sp1-helios-primitives = { package = "sp1-helios-primitives", git = "https://github.com/succinctlabs/sp1-helios", rev = "c9e81c8e48dec1e65e2de9fac6aed3a2cda6911e" }
helios-recursion-types = { path = "crates/integrations/sp1-helios/recursion-types" }
beacon-electra = { path = "crates/beacon-electra" }

# tendermint only
tendermint-recursion-types = { path = "crates/integrations/sp1-tendermint/recursion-types" }
sp1-tendermint-primitives = { package = "program-types", git = "https://github.com/timewave-computer/sp1-tendermint", branch = "valence-compat" }
tendermint-prover = { package = "tendermint-operator", git = "https://github.com/timewave-computer/sp1-tendermint", branch = "valence-compat" }

[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-5.0.0-v2" }
ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }
