[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
helios-operator.workspace = true
helios-ethereum.workspace = true
helios-consensus-core.workspace = true
sp1-helios-primitives.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
serde_cbor.workspace = true

sp1-sdk.workspace = true
sp1-verifier.workspace = true

tree_hash = "0.9.0"

hex = "0.4"

alloy.workspace = true
[build-dependencies]
sp1-build = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall" }
