[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
beacon-electra = { workspace = true, features = ["no-zkvm"] }
helios-operator.workspace = true
helios-ethereum.workspace = true
helios-consensus-core.workspace = true
sp1-helios-primitives.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
serde_cbor.workspace = true
clap = { version = "4.4", features = ["derive"] }

sp1-sdk.workspace = true
sp1-verifier.workspace = true
recursion-types.workspace = true
tree_hash = "0.9.0"
borsh.workspace = true
hex = "0.4"
alloy-sol-types.workspace = true
rusqlite = "=0.28.0"
axum = "0.8.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
cuda = ["sp1-sdk/cuda"]

[build-dependencies]
sp1-build = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall" }
