[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
beacon-electra = { workspace = true, features = ["no-zkvm"] }
helios-operator.workspace = true
helios-ethereum.workspace = true
helios-consensus-core.workspace = true
sp1-helios-primitives.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
serde_cbor.workspace = true
clap = { version = "4.4", features = ["derive"] }

sp1-sdk.workspace = true
sp1-verifier.workspace = true
helios-recursion-types.workspace = true
tree_hash = "0.9.0"
borsh.workspace = true
hex = "0.4"
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
rusqlite = "=0.28.0"
axum = "0.8.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3.4.7"
tendermint-prover.workspace = true
tendermint-recursion-types.workspace = true
tendermint-program-types.workspace = true
once_cell = "1.19"

[build-dependencies]
sp1-build = "5.0.0"

[features]
default = ["helios"]
helios = []
tendermint = []
