[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
sp1-sdk.workspace = true
sp1-verifier.workspace = true
borsh.workspace = true

clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
rusqlite = "=0.28.0"
axum = "0.8.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3.4.7"
once_cell = "1.19"

# Serialization
serde_json.workspace = true
serde_cbor.workspace = true
serde.workspace = true

# Alloy
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
tree_hash = "0.9.0"

# Tendermint dependencies
tendermint-prover.workspace = true
sp1-tendermint-primitives.workspace = true
tendermint-recursion-types.workspace = true


# Helios dependencies
beacon-electra = { workspace = true, features = ["no-zkvm"] }
sp1-helios-primitives.workspace = true
helios-operator.workspace = true
helios-ethereum.workspace = true
helios-consensus-core.workspace = true
helios-recursion-types.workspace = true

[build-dependencies]
sp1-build = "5.0.0"

[features]
default = ["helios"]
helios = []
tendermint = []
