[package]
name = "helios-recursion-circuit"
version = "0.1.0"
edition = "2024"

[dependencies]
sp1-zkvm.workspace = true
sp1-verifier.workspace = true
borsh.workspace = true
helios-recursion-types.workspace = true
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
sp1-helios-primitives.workspace = true
beacon-electra.workspace = true
